<resources>
    <string name="app_name">Mangakomi</string>
    <string name="most_popular">Most Popular</string>
    <string name="home">Home</string>
    <string name="latest_update">Latest Update</string>
    <string name="hot_manga">Hot Manga</string>
    <string name="new_manga">New Manga</string>
    <string name="latest_manager_update">Latest Manager update</string>
    <string name="see_more">see more</string>
    <string name="chapter">Chapter</string>
    <string name="read_now">Read Now</string>
    <string name="time_update">Time update</string>
    <string name="content">Content</string>
    <string name="title">Title</string>
    <string name="bookmark">Bookmark</string>
    <string name="tv_manga_name">tv_manga_name</string>
    <string name="latest_updates">Latest Updates</string>
    <string name="genres">Genres</string>
    <string name="history">History</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="manga_name">Manga name</string>
    <string name="rating">Rating</string>
    <string name="ranking">Rank</string>
    <string name="alternative">Alternative</string>
    <string name="genre_s">Genre(s)</string>
    <string name="status">Status</string>
    <string name="type">Type</string>
    <string name="read_last">Read Last</string>
    <string name="read_more">read more</string>
    <string name="select_chapter">select chapter</string>
    <string name="no_data">No Data</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_thanks">No, Thanks</string>
    <string name="yes">Yes</string>
    <string name="search">Search</string>



    <!-- AdMob ad unit IDs -->
    <string name="google_admob_ID">ca-app-pub-5372862349743986~5795911023</string>

    <string name="AdUnitId_banner_footer">ca-app-pub-5372862349743986/3527990272</string>
    <string name="AdUnitId_interstitial_full_screen">ca-app-pub-5372862349743986/6293754412</string>
</resources>