<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/layout_item"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/bg_yellow_light_shape_border_gray_20"
    android:layout_marginEnd="@dimen/define_dimen_10"
        android:layout_marginBottom="@dimen/define_dimen_10"
   >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/define_dimen_80"
        android:layout_height="@dimen/define_dimen_100"
        android:layout_marginStart="@dimen/define_dimen_30"
        android:layout_marginEnd="@dimen/define_dimen_30"
        android:scaleType="fitXY"
        android:src="@drawable/img_no_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/define_dimen_10"
        android:layout_marginEnd="@dimen/define_dimen_10"
        android:layout_marginTop="@dimen/define_dimen_4"
        android:layout_marginBottom="@dimen/define_dimen_4"
        android:orientation="vertical"
       >

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="@dimen/define_dimen_10"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/tv_chapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chapter"
            android:textSize="@dimen/define_dimen_10"
            android:paddingTop="@dimen/define_dimen_4"
            android:paddingBottom="@dimen/define_dimen_4"
            android:paddingStart="@dimen/define_dimen_10"
            android:paddingEnd="@dimen/define_dimen_10"

            android:background="@drawable/bg_yellow_light_white_shape_border_gray_20"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/tv_time_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/define_dimen_10"
            android:text="@string/time_update"
            tools:ignore="SpUsage" />
    </LinearLayout>
</LinearLayout>