<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/transparent"
    android:elevation="@dimen/define_dimen_10">

  <LinearLayout

      android:layout_width="360dp"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:background="@color/white"
      android:gravity="center"
      android:layout_gravity="center"
      >
    <LinearLayout
        android:id="@+id/btn_genres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_black_light_stroke_black"
        android:padding="@dimen/define_dimen_10">
      <ImageView
          android:layout_width="@dimen/define_dimen_30"
          android:layout_height="@dimen/define_dimen_30"
          android:src="@drawable/icon_genre_menu"
          android:layout_marginStart="@dimen/define_dimen_10"/>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/genres"
          android:textColor="@color/white"
          android:textSize="@dimen/define_dimen_20"
          android:textStyle="bold"
        android:layout_marginStart="@dimen/define_dimen_40"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_black_light_stroke_black"
        android:padding="@dimen/define_dimen_10">
      <ImageView
          android:layout_width="@dimen/define_dimen_30"
          android:layout_height="@dimen/define_dimen_30"
          android:src="@drawable/icon_history_menu"
          android:layout_marginStart="@dimen/define_dimen_10"/>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/history"
          android:textColor="@color/white"
          android:textSize="@dimen/define_dimen_20"
          android:textStyle="bold"
          android:layout_marginStart="@dimen/define_dimen_40"
          tools:ignore="SpUsage" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/btn_bookmarked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_black_light_stroke_black"
        android:padding="@dimen/define_dimen_10">
      <ImageView
          android:layout_width="@dimen/define_dimen_30"
          android:layout_height="@dimen/define_dimen_30"
          android:src="@drawable/iocn_bookmarked_menu"
          android:layout_marginStart="@dimen/define_dimen_10"/>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/bookmark"
          android:textColor="@color/white"
          android:textSize="@dimen/define_dimen_20"
          android:textStyle="bold"
          android:layout_marginStart="@dimen/define_dimen_40"/>

    </LinearLayout>
  </LinearLayout>
</LinearLayout>