<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/define_dimen_120"
    android:layout_marginEnd="@dimen/define_dimen_12"
    android:layout_marginBottom="@dimen/define_dimen_6"
    android:id="@+id/layout_item"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gray_white_shape_boder_orange_soft_corner_10"
    tools:ignore="MissingClass">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_red_coner_10"
       >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/define_dimen_30"
            android:textSize="@dimen/define_dimen_30"
            android:layout_toStartOf="@+id/icon_delete"
            android:layout_marginEnd="@dimen/define_dimen_60"
            android:text="@string/delete" />

        <ImageView
            android:id="@id/icon_delete"
            android:layout_width="@dimen/define_dimen_60"
            android:layout_height="@dimen/define_dimen_60"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/define_dimen_20"
            android:src="@drawable/ic_baseline_delete_forever_24" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/define_dimen_2"
        android:background="@drawable/bg_gray_white_shape_boder_orange_soft_corner_10"
        android:id="@+id/layout_fore_ground"
        android:orientation="horizontal"

        >


        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/define_dimen_80"
            android:layout_height="110dp"
            app:cardCornerRadius="@dimen/define_dimen_6"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/img_manga"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                />
            <!--          android:scaleType="fitXY" ko cần thiết khi đã có    android:adjustViewBounds="true"        -->
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/define_dimen_10"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_manga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manga_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon_start_1"
                    android:layout_width="@dimen/define_dimen_14"
                    android:layout_height="@dimen/define_dimen_14"
                    android:layout_marginEnd="@dimen/define_dimen_10"
                    android:src="@drawable/icon_rating" />

                <ImageView
                    android:id="@+id/icon_start_2"
                    android:layout_width="@dimen/define_dimen_14"
                    android:layout_height="@dimen/define_dimen_14"
                    android:layout_marginEnd="@dimen/define_dimen_10"
                    android:src="@drawable/icon_rating" />

                <ImageView
                    android:id="@+id/icon_start_3"
                    android:layout_width="@dimen/define_dimen_14"
                    android:layout_height="@dimen/define_dimen_14"
                    android:layout_marginEnd="@dimen/define_dimen_10"
                    android:src="@drawable/icon_rating" />

                <ImageView
                    android:id="@+id/icon_start_4"
                    android:layout_width="@dimen/define_dimen_14"
                    android:layout_height="@dimen/define_dimen_14"
                    android:layout_marginEnd="@dimen/define_dimen_10"
                    android:src="@drawable/icon_rating" />

                <ImageView
                    android:id="@+id/icon_start_5"
                    android:layout_width="@dimen/define_dimen_14"
                    android:layout_height="@dimen/define_dimen_14"
                    android:layout_marginEnd="@dimen/define_dimen_10"
                    android:src="@drawable/icon_rating" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_ranking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ranking" />

            <TextView
                android:id="@+id/tv_chapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chapter" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/define_dimen_2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/define_dimen_20"
                    android:text="@string/bookmark" />

                <ImageView
                    android:id="@+id/icon_bookmark"
                    android:layout_width="@dimen/define_dimen_20"
                    android:layout_height="@dimen/define_dimen_20"
                    android:layout_marginEnd="1dp"
                    android:src="@drawable/bookmark_dark" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</FrameLayout>